--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "clean": "rimraf ./node_modules ./build",
+    "build": "npm run clean && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.7"
   }
 }
