--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "clean": "rimraf ./node_modules ./build",
     "build": "npm run clean && react-scripts build"
   },
