finished refactoring desktop and mobile version

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MediVisit",
-  "name": "MediVisit App",
+  "short_name": "DOVIRA",
+  "name": "DOVIRA App",
   "icons": [
     {
       "src": "favicon.svg",
