--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # production
 /build
+NUL
 
 # misc
 .DS_Store
@@ -19,7 +20,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
